--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
         cluster-create-form {
-            max-width: fit-content;
+            max-width: 470px;
             margin: 0 auto;
         }
 
